fix: Fix body overflow bug when reaching top and bottom as scrolling

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,9 +42,15 @@ $grey-color: #ebebeb;
 }
 
 // ******************** <GLOBAL> ********************
+html {
+  height: 100%;
+}
+
 body {
   font-family: $font-family;
   box-sizing: border-box;
+  height: 100%;
+  overflow: auto;
 }
 
 h1,
